# rust_bootcamp

./: README.md
1.CLI/: Cargo.toml
1.CLI/src/: db.rs  models.rs
1.beginner/1.get_up_and_running_fast/control_flow/loops/: Cargo.toml
1.beginner/1.get_up_and_running_fast/data_types/floating_point_numbers/: Cargo.toml
1.beginner/1.get_up_and_running_fast/data_types/signed_int/: Cargo.toml
1.beginner/1.get_up_and_running_fast/data_types/string_types/: Cargo.toml
2.intermediate/1.Generics/generic_type_example/: Cargo.toml
2.intermediate/1.Generics/implementation_blocks_1/: Cargo.toml
2.intermediate/1.Generics/implementation_blocks_2/: Cargo.toml
2.intermediate/2.traits/implementing_traits_1/: Cargo.toml
2.intermediate/2.traits/implementing_traits_2/: Cargo.toml
2.intermediate/2.traits/overriding/: Cargo.toml
2.intermediate/3.trait_bounds/mulptiple_trait_bounds_2/: Cargo.toml
2.intermediate/3.trait_bounds/specifying_trait_bounds_1/: Cargo.toml
2.intermediate/3.trait_bounds/specifying_trait_bounds_2/: Cargo.toml
2.intermediate/4.supertraits/multiple_supertraits/: Cargo.toml
2.intermediate/5.trait_objects/returning_and_passing_to_functions/: Cargo.toml
2.intermediate/6.deriving_traits/deriving_on_enums/: Cargo.toml
4.Projects/api_axum/: .gitignore  Cargo.toml  Dockerfile  Readme
4.Projects/api_axum/migrations/: 20241029125407_setup.up.sql
4.Projects/api_axum/src/: main.rs  models.rs
4.Projects/api_axum/src/handlers/: handlers_inner.rs  mod.rs
4.Projects/api_axum/src/persistance/: answers_dao.rs  questions_dao.rs
(+229 files in other folders)
