[package]
name = "api_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["full"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "uuid",
] }
thiserror = "1.0.65"
async-trait = "0.1.83"
