[package]
name = "api_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "uuid",
] }
thiserror = "2.0.3"
async-trait = "0.1.83"
mockall = "0.13.1"
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
